# smart

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
smart/: __init__.py  schedule.py  schedule_utils.py  tado.py
tests/: conftest.py  mock_env.txt  sample_schedule_1.toml  sample_schedule_2.toml  sample_schedule_3.toml  sample_schedule_4.toml  token.json
tests/app/: mock_env.js  test_main.py
tests/smart/: test_schedule.py  test_schedule_utils.py  test_tado.py
