[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "smart"
description = "An opinionated smart home API that extends tadoº smart thermostat scheduling abilities"
readme = "README.md"
license = {text = "MIT License"}
authors = [
    {name = "Conor MacBride", email = "conor@macbride.me"},
]
maintainers = [
    {name = "Conor MacBride", email = "conor@macbride.me"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
]
dynamic = ["version"]
requires-python = ">= 3.11"
dependencies = [
    "fastapi",
    "pydantic-settings",
    "requests",
    "uvicorn[standard]",
]

[project.optional-dependencies]
dev = [
    "httpx",
    "pytest",
    "pytest-cov",
    "responses",
]

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:",
    "except ImportError",
    "return Settings()",
]
fail_under = 100

[tool.hatch.build.hooks.vcs]
version-file = "smart/_version.py"

[tool.hatch.version]
source = "vcs"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
